# happy_chicken

backend/: Cargo.toml
backend/entity/: Cargo.toml
backend/entity/src/: food.rs
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20220101_000001_create_foods_table.rs
backend/src/: main.rs
